test/Error/Unify/IfFun/Test.ds

-- Checks type error reporting.
--	Wrong type for descriminant in if-then-else statement (expects Bool).

t	= if (\x -> x)
		then "perch"
		else "gourami";


